# focused_window_source

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: active_window_manager.rs  lib.rs
